--- a/part.html
+++ b/part.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Falling 小遊戲</title>
+    <title>寵物伴</title>
    <style>
         body {
             font-family: Arial, sans-serif;
@@ -89,7 +89,7 @@
 
 <!--leaderBoard介面-->
 <div id="leaderboard" style="display:none;">
-    <h2>~ Falling Ball 榮譽榜 ~</h2>  
+    <h2>~ 榮譽榜 ~</h2>  
     <table>
         <thead>
             <tr>
@@ -104,7 +104,7 @@
 </div>
 
 <script>
-const apiUrl = 'https://fallingball.onrender.com';  
+const apiUrl = '';  
 let user;
 let name;
 
@@ -168,14 +168,14 @@ async function update(score) {
     const response = await fetch(`${apiUrl}/getScore?username=${user}`);
     const data = await response.json();
 
-    if (data && data.score < score) {
-        //使後台紀錄的分數是該玩家遊玩的歷史最高分
+    if (data && data.score != null) {
+        const newScore = data.score + score;
         await fetch(`${apiUrl}/updateScore`, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
             },
-            body: JSON.stringify({ username: user, petname: name, score: score }),
+            body: JSON.stringify({ username: user, petname: name, score: newScore }),
         });
     }
 
