--- a/part.html
+++ b/part.html
@@ -6,6 +6,7 @@
     <title>寵物伴</title>
    <style>
         body {
+            /*此區不會用上*/
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             padding: 20px;
@@ -95,6 +96,7 @@
             <tr>
                 <th>No.</th>
                 <th>Name</th>
+                <th>Petname</th>
                 <th>Score</th>
             </tr>
         </thead>
